--- a/includes/include-img/pies.tex
+++ b/includes/include-img/pies.tex
@@ -2,7 +2,7 @@
   \centering
 %segundo bloco de figuras
   \begin{tabular}{c c c c c }
-    \includegraphics[width=3.5cm]{img/disposicaoTortaGrid3}    
+    \includegraphics[width=3.5cm]{img/disposicaoTortaGrid3.pdf}    
     & &\includegraphics[width=3.5cm]{img/truePieGrid} 
     & &
  \includegraphics[width=3.5cm]{img/falsePieGrid} \\%[\abovecaptionskip]
