--- a/includes/include-img/diagram1.tex
+++ b/includes/include-img/diagram1.tex
@@ -1,6 +1,6 @@
  \begin{figure}[htb]	
  \center%6.3
- \includegraphics[width=8cm]{./img/diagram.png}
+ \includegraphics[width=8cm]{./img/diagram.pdf}
  \caption{Diagram of some graph classes.}
 \label{fig:diagram}
 \end{figure}  
