--- a/main.tex
+++ b/main.tex
@@ -159,9 +159,9 @@ relation between  VPT, EPT and $B_1$-EPG graph classes.
  A collection  of sets satisfies the \textit{Helly property} when every pair-wise intersecting sub-collection  has at least one common element. When this property
  is satisfied by the set of vertices (edges) of the paths used in a representation, we get a Helly representation.  Helly $B_1$-EPG graphs were studied
  in \cite{bornstein2019complexity}.                                     
-\la{It's known that not every $B_1$-EPG graph admits a Helly representation. We are interested in determining the subgraphs that make
+It is known that not every $B_1$-EPG graph admits a Helly $B_1$-EPG representation. We are interested in determining the subgraphs that make
 $B_1$-EPG graphs do not admit a Helly representation. In the present work, we describe some structures that will be present in any such subgraph,
-and, in addition, we present new  Helly $B_1$-EPG  subclasses.}
+and, in addition, we present new  Helly $B_1$-EPG  subclasses.
 Moreover,  we  describe new  Helly $B_1$-EPG  subclasses % that have Helly property 
 and we give some sets of subgraphs that delimit Helly subfamilies.   
 \section{Definitions and Technical Results}
@@ -179,7 +179,7 @@ $2k$ vertices, an independent set $X = \{x_1, \dots, x_k\}$ and a clique $Y = \{
 A graph is a $ B_k$-EPG graph if it admits a representation in which each path has at most $k$ bends.  When $ k = 1 $ we say that this is a \emph{single bend EPG} representation or simply a $B_1$-EPG representation.
 A \textit{clique} is a set of pairwise adjacent vertices and
 an \textit{independent set} is a set of pairwise non adjacent vertices.
-Given an EPG representation of a graph $G$, we will identify each vertex $v$ of $G$ with the corresponding path $P_{v}$ of the grid used in the representation. 
+Given an EPG representation of a graph $G$, we will identify each vertex $v$ of $G$ with the corresponding path $P_{v}$ of the grid used in the representation. Accordingly, for instance, we will say that a vertex of $G$ covers or contains some edge of the grid, or that a set of paths of the representation induces a subgraph of $G$. 
 
 In  a $B_1$-EPG representation, a clique $K$  is said to be
  an \textit{edge-clique} if all the vertices of $K$ share a common edge of the grid (see Figure~\ref{fig:cliquesRepresentation}(a)).
@@ -187,6 +187,7 @@ In  a $B_1$-EPG representation, a clique $K$  is said to be
   the \textit{center of the claw}. The two edges of the claw that have the same direction form
     the \textit{ base of the claw}. If $K$ is not an edge-clique, then there exists
     a claw of the grid such that the vertices of $K$ are those containing exactly two of the three edges of the claw; such a  clique is called  \textit{claw-clique} \cite{golumbic2009} (see Figure~\ref{fig:cliquesRepresentation}(b)).% Let $\mathcal{P}_K$ be the set path corresponding to vertices of a claw-clique $K$ in a $B_1$-EPG representation, then the paths $P \in \mathcal{P}_K$ that do not bend in the center of claw-clique are called \textit{base} of the claw-clique.
+
     
 \input{includes/include-img/clawAndEdgeClique.tex}    
 
@@ -194,9 +195,9 @@ In  a $B_1$-EPG representation, a clique $K$  is said to be
 %vertices induce a claw-clique), then exactly two of them turn at a same
 %point of the grid, the center of the claw (see Figure~\ref{fig:cliquesRepresentation}(b)). 
 %This point is the central point of the claw. Clearly, if three paths form a claw, then any clique containing the corresponding three vertices is a claw-clique.
-\la{Notice that if three vertices induce a claw-clique, then exactly two of them turn at the center of the corresponding  claw of the grid, and the third one contains the
+Notice that if three vertices induce a claw-clique, then exactly two of them turn at the center of the corresponding  claw of the grid, and the third one contains the
 base of the claw. 
-Furthermore, any other vertex  adjacent to the three  must contain two of the edges of that claw, then the following lemma holds.}
+Furthermore, any other vertex  adjacent to the three  must contain two of the edges of that claw, then the following lemma holds.
 
 \begin{lema}\label{lem:cliquesMaximais}
 If three vertices are together  in more than one maximal clique of a graph $G$, then in
@@ -212,7 +213,7 @@ any $B_1$-EPG representation of $G$ the three vertices do not form a claw-clique
 In \cite{ries2009} Asinowski et al. proved the following lemma for $C_4$-free graphs.
 
 \begin{lema} \cite{ries2009} \label{lem:lemaBRies2009}
-Let $G$ be a $B_1$-EPG graph. If $G$ is $C_4$-free, then there exists a $B_1$-EPG representation of $G$ such that every \la{maximal} claw-clique $K$ is represented on a claw of the grid whose base is covered only by vertices of $K$.
+Let $G$ be a $B_1$-EPG graph. If $G$ is $C_4$-free, then there exists a $B_1$-EPG representation of $G$ such that every  maximal claw-clique $K$ is represented on a claw of the grid whose base is covered only by vertices of $K$.
 \end{lema}
 
 
@@ -221,35 +222,37 @@ We have obtained the following similar result for diamond-free graphs. A \textit
 \input{includes/include-img/diamond.tex}
 
 \begin{lema}\label{lem:b1epgDiamondFree}
-Let $G$ be a $B_1$-EPG graph. If $G$ is diamond-free, then there exists a $B_1$-EPG representation of $G$ such that every claw-clique $K$ is represented on a claw of the grid  whose   base and the segment of intersection of paths of $K$ that bend in the center of this claw are covered only by paths corresponding to the vertices of $K$ \la{Let $K$ be a maximal clique of a $B_1$-EPG graph $G$. In any $B_1$-EPG representation of $G$, if $K$ is a claw-clique, then the edges of the corresponding claw of the grid are covered only by vertices of $K$}.
+%Let $G$ be a $B_1$-EPG graph. If $G$ is diamond-free, then there exists a $B_1$-EPG representation of $G$ such that every claw-clique $K$ is represented on a claw of the grid  whose   base and the segment of intersection of paths of $K$ that bend in the center of this claw are covered only by paths corresponding to the vertices of $K$
+Let $G$ be a $B_1$-EPG graph. If $G$ is diamond-free, then in any $B_1$-EPG representation of $G$,  every maximal claw-clique $K$ is represented on a claw of the grid whose edges are covered only by vertices of $K$.%Let $K$ be a maximal clique of a $B_1$-EPG graph $G$. In any $B_1$-EPG representation of $G$, if $K$ is a claw-clique, then the edges of the corresponding claw of the grid are covered only by vertices of $K$
+
 \end{lema}
 
-\begin{pf} \la{Let $K$ be a maximal clique which is a claw-clique in a given $B_1$-EPG representation of $G$. Then there exist three vertices of $K$ which induce a claw-clique $K'$ on
+\begin{pf}Let $K$ be a maximal clique which is a claw-clique in a given $B_1$-EPG representation of $G$. Then there exist three vertices of $K$ which induce a claw-clique $K'$ on
 the same claw of the grid than $K$. Assume, in order to derive a contradiction, that a vertex $v\notin K$ covers some edges of the claw. Clearly, $v$ must  cover
-only one of such edges. Therefore $v$ and the vertices of $K'$ induce a diamond, a contradiction.}
+only one of such edges. Therefore $v$ and the vertices of $K'$ induce a diamond, a contradiction. $\square$
+% Denote by $\mathcal{P}_K$ the set of paths corresponding to vertices of $K$. 
+% Assume, without loss of generality, that the base of the claw-clique is $[x_0, x_2] \times \{y_0\}$ and the center is $C = (x_1 , y_0)$. If no path $P_v \notin \mathcal{P}_K$ uses row $y_0$ between columns $x_0$ and $x_2$, and no column $x_1$ between rows $y_0$ and $y_1$ then we
+% are done. So we may assume now that there exists a path $P_v \notin \mathcal{P}_K$ such that $P_v$ uses the grid segment $[x_0, x_1] \times \{y_0\}$, $[x_1, x_2] \times \{y_0\}$ or  $\{x_1\} \times [y_0, y_1]$.  Clearly $P_v$ cannot use either the segment $[x_0, x_2] \times \{y_0\}$, nor the segment $\{x_1\} \times [y_0, y_1]$ and bend in $C$, otherwise $v \in K$, a contradiction. Thus we may distinguish three cases: $(i)$ $C$ is an endpoint of $P_v$; $(ii)$ $P_v$ is a ${\urcorner} $-path or a ${\ulcorner} $-path with bend point $C$; $(iii)$ $P_v$ is in $\{x_1\} \times [y_0, y_1]$ and $P_v$ crosses the point $C$.  
 
-Denote by $\mathcal{P}_K$ the set of paths corresponding to vertices of $K$. 
-Assume, without loss of generality, that the base of the claw-clique is $[x_0, x_2] \times \{y_0\}$ and the center is $C = (x_1 , y_0)$. If no path $P_v \notin \mathcal{P}_K$ uses row $y_0$ between columns $x_0$ and $x_2$, and no column $x_1$ between rows $y_0$ and $y_1$ then we
-are done. So we may assume now that there exists a path $P_v \notin \mathcal{P}_K$ such that $P_v$ uses the grid segment $[x_0, x_1] \times \{y_0\}$, $[x_1, x_2] \times \{y_0\}$ or  $\{x_1\} \times [y_0, y_1]$.  Clearly $P_v$ cannot use either the segment $[x_0, x_2] \times \{y_0\}$, nor the segment $\{x_1\} \times [y_0, y_1]$ and bend in $C$, otherwise $v \in K$, a contradiction. Thus we may distinguish three cases: $(i)$ $C$ is an endpoint of $P_v$; $(ii)$ $P_v$ is a ${\urcorner} $-path or a ${\ulcorner} $-path with bend point $C$; $(iii)$ $P_v$ is in $\{x_1\} \times [y_0, y_1]$ and $P_v$ crosses the point $C$.  
-
-\begin{enumerate}[label=(\roman*)]
-    \item if $C$ is an endpoint of $P_v$; $P_v \notin \mathcal{P}_K$; and $P_v$ has segment in  $[x_0, x_1] \times \{y_0\}$, or in $[x_1, x_2] \times \{y_0\}$, or $\{x_1\} \times [y_0, y_1]$ then there are at least three paths in $\mathcal{P}_K$, we say $P_{k_1}, P_{k_2}$ and $P_{k_3}$ such that $G[\{k_1, k_2, k_3\}\cup \{v\}]$ forms a diamond, a contradiction.
-    \item if $P_v$ bend in $C$ and $P_v \notin \mathcal{P}_K$ something similar occurs in $G$. As $K$ is a claw-clique then there are at least three paths in $\mathcal{P}_K$, we say $P_{k_1}, P_{k_2}$ and $P_{k_3}$ such that $G[\{k_1, k_2, k_3\}\cup \{v\}]$ forms a diamond, again a contradiction.
-    \item as in case (i), it also induces a diamond. 
-\end{enumerate}
-Thus we show that only paths corresponding to the vertices of $K$ use the grid segments $[x_0, x_2]\times\{y_ 0\}$ and $\{x_1\}\times[y_ 0, y_ 1]$.
-$\square$
+% \begin{enumerate}[label=(\roman*)]
+%     \item if $C$ is an endpoint of $P_v$; $P_v \notin \mathcal{P}_K$; and $P_v$ has segment in  $[x_0, x_1] \times \{y_0\}$, or in $[x_1, x_2] \times \{y_0\}$, or $\{x_1\} \times [y_0, y_1]$ then there are at least three paths in $\mathcal{P}_K$, we say $P_{k_1}, P_{k_2}$ and $P_{k_3}$ such that $G[\{k_1, k_2, k_3\}\cup \{v\}]$ forms a diamond, a contradiction.
+%     \item if $P_v$ bend in $C$ and $P_v \notin \mathcal{P}_K$ something similar occurs in $G$. As $K$ is a claw-clique then there are at least three paths in $\mathcal{P}_K$, we say $P_{k_1}, P_{k_2}$ and $P_{k_3}$ such that $G[\{k_1, k_2, k_3\}\cup \{v\}]$ forms a diamond, again a contradiction.
+%     \item as in case (i), it also induces a diamond. 
+% \end{enumerate}
+% Thus we show that only paths corresponding to the vertices of $K$ use the grid segments $[x_0, x_2]\times\{y_ 0\}$ and $\{x_1\}\times[y_ 0, y_ 1]$.
 \end{pf}
 
 
 % \begin{defi} \label{defi:tortasFrame}
 
-Let $ Q $ be a grid and let $ (a_1, b),$ $(a_2, b),$ $(a_3, b),$ $(a_4, b)$ be a $4$-star as depicted in Figure~\ref{fig:piesInGrid}(a). Let $ \mathcal{P} = \{P_1, \dots , P_4\}$ be a collection of paths each containing exactly two edges of the $4$-star:
-
+Let $ Q $ be a grid and let $ (a_1, b),$ $(a_2, b),$ $(a_3, b),$ $(a_4, b)$ be a $4$-star centered at $b$ as depicted in Figure~\ref{fig:piesInGrid}(a). Let $ \mathcal{P} = \{P_1, \dots , P_4\}$ be a collection of four paths each containing a different pair of edges of the $4$-star.
+%exactly two edges of the $4$-star:
+Following \cite{golumbic2009}, we say that the four paths form
 \begin{itemize}
-\item A \emph{true pie} is a representation where each $P_i$ of $ \mathcal{P} $ has a bend at $b$.
-
-\item A \emph {false pie} is a representation where two of the paths $P_i$ do not contain bends, while the remaining two do not share an edge. 
+\item a \emph{true pie} %is a representation where each $P_i$ of $ \mathcal{P} $ has a bend at $b$.
+when each one has a bend at $b$, Figure~\ref{fig:piesInGrid}(b); and 
+\item a \emph {false pie} when exactly two of the paths %$P_i$  do not 
+bend at $b$ and they do not share an edge of the $4$-star, FigureFigure~\ref{fig:piesInGrid}(c). %contain bends, while the remaining two do not share an edge. 
 
 %In false pie only 2 paths not adjacent do bend in $b$.
 %\vspace{-0.5cm}
@@ -260,10 +263,11 @@ Let $ Q $ be a grid and let $ (a_1, b),$ $(a_2, b),$ $(a_3, b),$ $(a_4, b)$ be a
 \end{itemize}
 % \end{defi}
 
-Clearly if four paths of a $B_1$-EPG representation of $G$ form a pie, then the corresponding vertices induce a $4$-cycle in $G$. The converse implication is also true (see~\cite{golumbic2009}). The following result can be easily proved.
+Clearly if four paths of a $B_1$-EPG representation of $G$ form a pie, then the corresponding vertices induce a $4$-cycle in $G$. % The converse implication is also true (see~\cite{golumbic2009}). 
+The following result can be easily proved. We say that a set of paths form a claw when each pair of edges of the claw is covered by some of the paths.
 
 \begin{lema}\label{lem:twoClawNotSameCenterInChordal}
-In any $B_1$-EPG representation of a graph $G$, a set of paths forming two different claws centered at the same point of the grid contains four paths forming either a true pie or a false pie. Therefore, in any $B_1$-EPG representation of a chordal graph $G$ no two maximal claw-cliques of $G$ are centered at the same point of the grid.
+In any $B_1$-EPG representation of a graph $G$, a set of paths forming two different claws centered at the same point of the grid contains four paths forming either a true pie or a false pie. Therefore, in any $B_1$-EPG representation of a chordal graph $G$, no two maximal claw-cliques of $G$ are centered at the same point of the grid.
 \end{lema}
 
 % In an EPG representation of a graph $G$, a clique $C$  is an \textit{edge-clique} if all the paths that correspond to the vertices of $C$ share a common edge of the grid $Q$, see Figure~\ref{fig:cliquesRepresentation}(a). %A \textit{claw} in a grid consists of three grid edges meeting at a named the central point of the claw. The set of paths which contain two of the three edges of a claw form a clique, this clique is called a \textit{claw-clique}, see Figure~\ref{fig:cliquesRepresentation}(b).
@@ -278,7 +282,7 @@ In any $B_1$-EPG representation of a graph $G$, a set of paths forming two diffe
 
 \begin{lema}\label{lem:3cliquesNotClaw}
 Let $G$ be a graph whose vertex set  can be
-partitioned into a non trivial clique $K$ and an independent set $I=\{w_1,w_2,w_3\}$, such that each vertex of $K$ is adjacent to each vertex of $I$. Then, in any $B_1$-EPG representation of $G$, at least one of the cliques  $K_i = K \cup w_i$, with $1 \leq i \leq 3$,  is an edge-clique. 
+partitioned into a non trivial clique $K$ and an independent set $I=\{w_1,w_2,w_3\}$, such that each vertex of $K$ is adjacent to each vertex of $I$. Then, in any $B_1$-EPG representation of $G$, at least one of the cliques  $K_i = K \cup \{w_i\}$, with $1 \leq i \leq 3$,  is an edge-clique. 
 \end{lema}
 
 \begin{pf}
@@ -296,15 +300,17 @@ Assume, in order to derive a contradiction, that the three cliques are claw-cliq
 
 \section{Subclasses of Helly $B_1$-EPG Graphs}
 
-In this section, we delimit some  subclasses of $B_1$-EPG graphs that admit a Helly representation. It is known that $B_1$-EPG and Helly $B_1$-EPG 
-are hereditary classes, so they may be characterized by forbidden structures. 
+In this section, we delimit some  subclasses of $B_1$-EPG graphs that admit a Helly $B_1$-EPG representation. It is known that $B_1$-EPG and Helly $B_1$-EPG 
+are hereditary classes, so they can  be characterized by forbidden structures. 
 In both cases, finding the list of minimal forbidden induced subgraphs are challenging open problems.
 Taking a step towards solving
-those problems,  we describe a few structures that provide a $B_1$-EPG graph does not admit a Helly $B_1$-EPG representation, that is it is not a  Helly $B_1$-EPG graph. In addition,
+those problems,  we describe a few structures % that  provide a $B_1$-EPG graph does not admit a Helly $B_1$-EPG representation, that is it is not a  Helly $B_1$-EPG graph. 
+at least one of which will  necessarily be present in  any $B_1$-EPG graph that does not admit a Helly representation. 
+In addition,
 we show that the well known families of Block graphs, Cactus and Line of Bipartite graphs are totally contained in the class Helly $B_1$-EPG.
 
 
-\la{A $B_1$-EPG intersection model and the graph depicted in Figure~\ref{fig:clawGrid} have edges that may or may not occur (dashed edges are optional)}. This figure is useful for the proof of Theorem~\ref{lem:chordalDiamondFree}.
+%A $B_1$-EPG intersection model and the graph depicted in Figure~\ref{fig:clawGrid} have edges that may or may not occur (dashed edges are optional)}. This figure is %useful for the proof of Theorem~\ref{lem:chordalDiamondFree}.
 
 
 Let $S_{3}, S_{3'}, S_{3''}$ and $ C_{4}$ be the graphs depicted in Figure \ref{fig:proibidos}. 
@@ -318,10 +324,14 @@ Let $G$ be a $B_1$-EPG graph. If $G$ is  $\{S_{3}, S_{3'}, S_{3''}, C_{4}\}$-fre
 \end{teo}
 
 \begin{pf}
-If $G$ is not a Helly $B_1$-EPG graph then in each $B_1$-EPG representation of $G$ there is at least one clique that is represented as claw-clique and no as edge-clique. Consider any of these  representations and let $K$ denote a maximal clique in $G$ which is represented as a claw-clique. Let us denote by  $\mathcal{P}_K$ the set of paths corresponding to the vertices of $K$. 
-Without loss of generality, we may assume that $K$  has horizontal base $[x_0, x_2]\times\{y_0\}$ and center $C = (x_1, y_0)$. By Lemma~\ref{lem:lemaBRies2009} (see~\cite{ries2009}) we know that no path $P_w, w\notin K$, uses the grid segment $[x_0, x_2]\times\{y_0\}$ because $G$ is $C_4$-free.
+If $G$ is not a Helly $B_1$-EPG graph, then in each $B_1$-EPG representation of $G$, there is at least one clique that is represented as claw-clique and no as edge-clique. Consider any of these  representations and let $K$ be a maximal clique in $G$ which is represented as a claw-clique. Denote by  $\mathcal{P}_K$ the set of paths corresponding to the vertices of $K$. 
+Without loss of generality, we may assume that $K$  has horizontal base $[x_0, x_2]\times\{y_0\}$ and center $C = (x_1, y_0)$. By Lemma~\ref{lem:lemaBRies2009},  %(see~\cite{ries2009})
+no path $P_w$ for $w\notin K$ covers the grid segment $[x_0, x_2]\times\{y_0\}$% because $G$ is $C_4$-free
+.
 
- For every ${\displaystyle \lrcorner}$-path $P_v \in \mathcal{P}_K$ (resp. ${\displaystyle \llcorner}$-path $P_{v'} \in \mathcal{P}_K$), we do the following: if $P_v$ (resp. $P_{v'}$) does not intersect any path $P_t \notin \mathcal{K}$ on column $x_1$, then we delete its vertical segment and add the grid segment $[x_1, x_2]\times\{y_0\}$ (resp. $[x_0, x_1]\times\{y_0\}$). If after these transformations either there exist no more ${\displaystyle \lrcorner}$-paths in $\mathcal{P}_K$ (or there exist no more ${\displaystyle \llcorner}$-paths in $\mathcal{P}_K$), then we are done since we have obtained an edge-clique. So we may assume that there exists at least one ${\displaystyle \lrcorner}$-path $P_v \in \mathcal{P}_K$ and at least one ${\displaystyle \llcorner}$-path $P_{v'} \in \mathcal{P}_K$. Since both paths $P_v, P_{v'}$ intersect a path on column $x_1$, they necessarily intersect a common path, say $P_t \notin \mathcal{P}_K$, depicted in Figure~\ref{fig:clawGrid}. As $K$ is claw-clique then there is a path $P_u \in \mathcal{P}_K$ that is base. If there are paths $P_{t'}, P_{t''} \notin K$ with segment on line $y_0$ such that $P_{t'}$  intersects $P_{u}$ and $P_{v}$, and such that $P_{t''}$ intersects $P_{u}$ and $P_{v'}$ this induce a graph isomorphic to $S_3$ depicted in Figure~\ref{fig:proibidos}(a). If only $P_{t'}$ (or resp. only $P_{t''}$) intersects $P_{u}$ and $P_{v}$ (resp. $P_{u}$ and $P_{v'}$) while $P_{t''}$ (resp. $P_{t'}$) intersects only $P_{v'}$ (resp. $P_{v}$) then in this case we have an induced subgraph isomorphic to $S_{3'}$ depicted in Figure~\ref{fig:proibidos}(b). But if paths $P_{t'}, P_{t''}$ are adjacent to $P_v$ and $P_{v'}$, respectively, but these paths do not intersect $P_u$ then we have an induced subgraph isomorphic to $S_{3''}$ depicted in Figure~\ref{fig:proibidos}(c). To finish, if the path $P_{t'}$ (or resp. $P_{t''}$) does not exist then we can to delete the segment $[x_0,x_1]\times \{y_0\}$ (resp. $[x_1,x_2]\times \{y_0\}$) of $P_v$ (resp. $P_{v'}$) and add to the path $P_v$ (resp. $P_{v'}$) the segment $[x_1,x_2]\times \{y_0\}$ (resp. $[x_0,x_1]\times \{y_0\}$) and again we have obtained an edge-clique.
+ For every ${\displaystyle \lrcorner}$-path $P_v \in \mathcal{P}_K$ (resp. ${\displaystyle \llcorner}$-path $P_{v'} \in \mathcal{P}_K$), we do the following: if $P_v$ (resp. $P_{v'}$) does not intersect any path $P_t \notin\mathcal{P}_K$ on column $x_1$, then we delete its vertical segment and add the grid segment $[x_1, x_2]\times\{y_0\}$ (resp. $[x_0, x_1]\times\{y_0\}$). If after these transformations either there is no more ${\displaystyle \lrcorner}$-paths in $\mathcal{P}_K$ or there is no more ${\displaystyle \llcorner}$-paths in $\mathcal{P}_K$), then we are done since we have obtained an edge-clique. So we may assume that there exists at least one ${\displaystyle \lrcorner}$-path $P_v \in \mathcal{P}_K$ and at least one ${\displaystyle \llcorner}$-path $P_{v'} \in \mathcal{P}_K$ intersecting a path on column $x_1$. Since both paths $P_v, P_{v'}$ intersect a path on column $x_1$, they necessarily intersect a common path, say $P_t \notin \mathcal{P}_K$, as depicted in Figure~\ref{fig:clawGrid}. 
+ 
+ Now, since $K$ is claw-clique,  there is a path $P_u \in \mathcal{P}_K$ covering the base of the claw. If there are paths $P_{t'}, P_{t''} \notin K$ with segment on line $y_0$ such that $P_{t'}$  intersects $P_{u}$ and $P_{v}$, and such that $P_{t''}$ intersects $P_{u}$ and $P_{v'}$ this induce a graph isomorphic to $S_3$ depicted in Figure~\ref{fig:proibidos}(a). If only $P_{t'}$ (or resp. only $P_{t''}$) intersects $P_{u}$ and $P_{v}$ (resp. $P_{u}$ and $P_{v'}$) while $P_{t''}$ (resp. $P_{t'}$) intersects only $P_{v'}$ (resp. $P_{v}$) then in this case we have an induced subgraph isomorphic to $S_{3'}$ depicted in Figure~\ref{fig:proibidos}(b). But if paths $P_{t'}, P_{t''}$ are adjacent to $P_v$ and $P_{v'}$, respectively, but these paths do not intersect $P_u$ then we have an induced subgraph isomorphic to $S_{3''}$ depicted in Figure~\ref{fig:proibidos}(c). \la{esta parte no sé si está bien, creo que no:To finish, if the path $P_{t'}$ (or resp. $P_{t''}$) does not exist then we can to delete the segment $[x_0,x_1]\times \{y_0\}$ (resp. $[x_1,x_2]\times \{y_0\}$) of $P_v$ (resp. $P_{v'}$) and add to the path $P_v$ (resp. $P_{v'}$) the segment $[x_1,x_2]\times \{y_0\}$ (resp. $[x_0,x_1]\times \{y_0\}$) and again we have obtained an edge-clique.}
  
  Thus, for each $B_1$-EPG graph that is $\{S_{3}, S_{3'}, S_{3''}, C_{4}\}$-free we obtained a Helly $B_1$-EPG representation.$\square$
 \end{pf}
@@ -376,7 +386,10 @@ Let us denote by  $\mathcal{P}_K$ the set of paths corresponding to the vertices
 % Thus, every Cograph $B_1$-EPG is Helly.
 %  $\square$\end{pf} 
 
-\la{A graph $G$ is said to be \textit{Bipartite} if and only if there exists a partition $V(G)=A\cup B$ and $A\cap B=\emptyset$. Hence, all edges share a vertex from both set $A$ and $B$, and there are no edges formed between two vertices in the set $A$, and there are not edges formed between the two vertices in $B$.}
+An \textit{independent set} of vertices is a set of vertices no two of which are adjacent.
+A graph $G$ is said to be \textit{Bipartite} if its set of vertices can be partitioned into two distinct independent sets.
+
+% and only if there exists a partition $V(G)=A\cup B$ and $A\cap B=\emptyset$. Hence, all edges share a vertex from both set $A$ and $B$, and there are no edges formed between two vertices in the set $A$, and there are not edges formed between the two vertices in $B$.}
 
 
 \begin{coro}
@@ -410,7 +423,7 @@ The problem of Block graph recognition is linear~\cite{tarjan1972depth}, so we k
 % Block (or Clique Tree) graphs are Helly $B_1$-EPG graphs.
 % \end{coro}
 
-A \textit{Cactus} (sometimes called a cactus tree)  graph is a connected graph in which any two \la{induced} cycles have at most one vertex in common. Equivalently, it is a connected graph in which every edge belongs to at most one \la{induced} cycle, or (for nontrivial cactus) in which every block (maximal subgraph without a cut-vertex) is an edge or a cycle. The family of graphs in which each component is a cactus is closed under graph minor operations. This graph family may be characterized by a single forbidden minor, the diamond graph.
+A \textit{Cactus} (sometimes called a cactus tree)  graph is a connected graph in which any two  cycles have at most one vertex in common. Equivalently, it is a connected graph in which every edge belongs to at most one  cycle, or (for nontrivial cactus) in which every block (maximal subgraph without a cut-vertex) is an edge or a cycle. The family of graphs in which each component is a cactus is closed under graph minor operations. This graph family may be characterized by a single forbidden minor, the diamond graph.
  
  In~\cite{cela2019monotonic} it is proved that every Cactus graph is a monotonic $B_1$-EPG graph (there is a $B_1$-EPG representation where all paths are ascending in rows and columns). Thus, Cactus graphs are $B_1$-EPG graphs. So the following corollary is true. 
  
@@ -452,25 +465,25 @@ We list in Figure~\ref{fig:exemplosDiagram} examples of graphs in each numbered 
 %This numbers correspond with the respective number item and in some cases we make a brief explanation.
 
 \begin{enumerate}[label=(\arabic*)]
-    \item $B_1$-EPG graphs - Helly - Line of Bipartite, depicted in Figure~\ref{fig:exemplosDiagram}(a). Despite every graph is Helly, not every graph is Helly for some $B_k$-EPG representation with a fixed $k$. So there are graphs that are not Helly for $B_1$-EPG, but those graphs are Helly for some $k>1$;%1
+    \item $B_1$-EPG  - Helly $B_1$-EPG graphs, depicted in Figure~\ref{fig:exemplosDiagram}(a), graph $E_1$;%1
     
-    \item $B_1$-EPG $\cap$ Line of Bipartite graphs $\cap$ Helly - Cactus - Block - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(b);%2
-    \item $B_1$-EPG $\cap$ Helly - Line of Bipartite - Block - Cactus - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(c). The diamond is an induced subgraph forbidden to Line of Bipartite, Block, Cactus and Bipartite graphs;%3
-    \item Block $\cap$ Line of Bipartite - Cactus - Bipartite, depicted in Figure~\ref{fig:exemplosDiagram}(d);%4
-    \item Block $\cap$ Line of Bipartite $\cap$  Cactus - Bipartite, depicted in Figure~\ref{fig:exemplosDiagram}(e);%5
+    \item Line of Bipartite graphs  - Cactus - Block - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(b), graph $E_2$;%2
+    \item Helly $B_1$-EPG - Line of Bipartite - Block - Cactus - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(c), graph $E_3$;%3
+    \item Block $\cap$ Line of Bipartite - Cactus - Bipartite, depicted in Figure~\ref{fig:exemplosDiagram}(d), graph $E_4$;%4
+    \item Block $\cap$ Line of Bipartite $\cap$  Cactus - Bipartite, depicted in Figure~\ref{fig:exemplosDiagram}(e), graph $E_5$;%5
     \item Cactus $\cap$ Line of Bipartite - Block - Bipartite. This intersection is empty. Let $G$ be a graph that is Cactus and Line of Bipartite then $G$ is $\{$claw, odd cycle, diamond$\}$-free. But $G$ is not a Bipartite graph, then $G$ has odd cycle. Thus $G$ has at least one triangle, at least one cycle $C_n, n\geq 4$, and $G$ is a connected graph. But given a cycle $C_n, n\geq 4$, if add one vertex any adjacent to this cycle then this induce a claw, absurd with the hypothesis of $G$ is Line of Bipartite;%6
-    \item Bipartite $\cap$ Line of Bipartite $\cap$ $B_1$-EPG - Cactus - Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(f), graph $2C_4$;%7
-    \item Bipartite $\cap$ Line of Bipartite $\cap$  Cactus - Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(g), graph $C_4$;%8
-    \item Bipartite $\cap$ Line of Bipartite $\cap$  Cactus $\cap$ Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(h), graph $K_2$;%9
+    \item Bipartite $\cap$ Line of Bipartite  - Cactus - Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(f), graph $E_7$;%7
+    \item Bipartite $\cap$ Line of Bipartite $\cap$  Cactus - Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(g), graph $E_8$;%8
+    \item Bipartite $\cap$ Line of Bipartite $\cap$  Cactus $\cap$ Block graphs, depicted in Figure~\ref{fig:exemplosDiagram}(h), graph $E_9$;%9
   \item Bipartite $\cap$  Cactus $\cap$ Block - Line of Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(i), graph $E_{10}$;%10
     \item Bipartite  $\cap$  Cactus - Block -  Line of Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(j), graph $E_{11}$;%11
-     \item Bipartite $\cap$ $B_1$-EPG - Cactus - Block -  Line of Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(k), graph $E_{12}$;%12
-      \item Bipartite - $B_1$-EPG - Cactus -  Line of Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(l), graph $K_{2,5}$;%13
+     \item Bipartite $\cap$ Helly $B_1$-EPG - Cactus - Block -  Line of Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(k), graph $E_{12}$;%12
+      \item Bipartite - $B_1$-EPG graphs, depicted in Figure~\ref{fig:exemplosDiagram}(l), graph $E_{13}$;%13
       \item Block - Bipartite - Line of Bipartite  - Cactus graphs, depicted in Figure~\ref{fig:exemplosDiagram}(m), graph $E_{14}$;%14
  
       \item Block $\cap$  Cactus -  Line of Bipartite - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(n), graph $E_{15}$;%15
-      \item Cactus - Block -  Line of Bipartite - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(o), graphs odd cycles $C_{2n+1},n\geq 2$;%16
-      \item Helly - $B_1$-EPG -  Line of Bipartite - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(p), graph 4-sun $S_4$;%17
+      \item Cactus - Block -  Line of Bipartite - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(o), graph $E_{16}$, the odd cycles $C_{2n+1},n\geq 2$;%16
+      \item Helly EPG - $B_1$-EPG  - Bipartite graphs, depicted in Figure~\ref{fig:exemplosDiagram}(p), graph  $E_{17}$;%17
 \end{enumerate}
 
 
@@ -498,21 +511,21 @@ We list in Figure~\ref{fig:exemplosDiagram} examples of graphs in each numbered 
  Any graph that
 admits a $B_1$-EPG representation  whose paths do not cover all the edges of a polygon of the grid (i.e.
 the subjacent grid subgraph is a tree)  is also an EPT graph: the same representation is both $B_1$-EPG and $EPT$.
-However, it is easily verifiable that any $B_1$-EPG representation of a \la{chordless} cycle $C_n$ with $n\geq 5$
+However, it is easily verifiable that any $B_1$-EPG representation of a cycle $C_n$ with $n\geq 5$
 has a non chordal subjacent grid subgraph although $C_n$ is an  EPT graph.  Our long-rage goal is 
 understanding the $B_1$-EPG graphs that are also EPT graphs. When can a $B_1$-EPG representation
 be reorganized into an EPT representation?  In this section,
  we answer that question for Chordal $B_1$-EPG graphs, in fact we prove that every Chordal $B_1$-EPG graph is EPT. We
  made several unsuccessful attempts to prove this result by considering for a graph $G$ a $B_1$-EPG representation whose paths cover all the edges
  of some polygon on the grid, and trying  to show  that if none of the paths could be modified in order to avoid an edge of the polygon,
- then $G$ had some \la{induced} cycle. The surprise was that the only way we found to demonstrate our main Theorem \ref{teo:b1epgept} was through $VPT$ graphs.
+ then $G$ had some  cycle. The surprise was that the only way we found to demonstrate our main Theorem \ref{teo:b1epgept} was through $VPT$ graphs.
  We will prove the following theorem.
 
 \begin{teo}\label{teo:chordalB1inVPT}
 Chordal $B_1$-EPG $\subsetneq$ VPT. 
 \end{teo}
 
-In~L{\'e}v{\^e}que et al. \cite{leveque2009characterizing} \la{apud} \cite{alcon2015characterizing},  VPT graphs were characterized by a family of minimal forbidden induced subgraphs,
+In~L{\'e}v{\^e}que et al. \cite{leveque2009characterizing} apud \cite{alcon2015characterizing},  VPT graphs were characterized by a family of minimal forbidden induced subgraphs,
 the ones depicted in 
 Figure~\ref{fig:16proibidos} plus the induced cycles $C_n$ for $n\geq 4$. Therefore, in order to prove
 that Chordal $B_1$-EPG graphs are VPT is enough to show that none of the graphs in Figure~\ref{fig:16proibidos} 
@@ -886,7 +899,7 @@ By results of~\cite{ries2009} we know that when $G$ is a $B_1$-EPG graph then $G
 
 By Theorem 6.7 of~\cite{golumbic2009}, we know that in any $B_1$-EPG representation of a graph $G$, where $C$ is a maximal clique of $G$, the Branch graph $B(G|C)$ contains no \la{induced} cycle $C_n$,  $n\geq 4$, or induced path $P_6$. Thus, the graphs $F_{11}, F_{12}, F_{13}, F_{14}$ and $F_{15}$  (see Figures~\ref{fig:16proibidos}(k), (l), (m), (n), (o), respectively)  are not $B_1$-EPG graphs.
 
-By Corollaries~\ref{coro:f8}, \ref{coro:f9} and Lemmas~\ref{lem:f10}, \ref{lem:f6}, \ref{lem:f7} from this paper, we conclude that every minimal forbidden induced subgraph for VPT is also a minimal forbidden induced subgraph for $B_1$-EPG. So we can say that the class of Chordal $B_1$-EPG graphs is contained in the class of VPT graphs. Furthermore, there are graphs in VPT that do not belong to $B_1$-EPG, for instance the graph $4$-sun $S_4$ is not in $B_1$-EPG, see~\cite{golumbic2009}, but it has a VPT representation, see Figures~\ref{fig:exemplos}(a) and~\ref{fig:exemplos}(b). \la{On the other hand, every Chordal graph is in VPT, obviously with the exception of graphs that have as forbidden induced subgraphs the graphs of Figure~\ref{fig:16proibidos}.} Thus, VPT graphs contain properly Chordal $B_1$-EPG graphs. This conclude the proof of Theorem~\ref{teo:chordalB1inVPT}.
+By Corollaries~\ref{coro:f8}, \ref{coro:f9} and Lemmas~\ref{lem:f10}, \ref{lem:f6}, \ref{lem:f7} from this paper, we conclude that every minimal forbidden induced subgraph for VPT is also a minimal forbidden induced subgraph for $B_1$-EPG. So we can say that the class of Chordal $B_1$-EPG graphs is contained in the class of VPT graphs. Furthermore, there are graphs in VPT that do not belong to $B_1$-EPG, for instance the graph $4$-sun $S_4$ is not in $B_1$-EPG, see~\cite{golumbic2009}, but it has a VPT representation, see Figures~\ref{fig:exemplos}(a) and~\ref{fig:exemplos}(b). Thus, VPT graphs contain properly Chordal $B_1$-EPG graphs. This conclude the proof of Theorem~\ref{teo:chordalB1inVPT}.
  %$\square$\end{pf} 
 
 \input{./includes/include-img/exemplos.tex}
@@ -902,10 +915,10 @@ Chordal $B_1$-EPG $\subsetneq$ EPT.
 \end{teo}
 
 \begin{pf}
-Given $G$ be a  Chordal $B_1$-EPG graph and let  $\mathcal{C}$  be the set of cliques of $G$. By Theorem~\ref{teo:chordalB1inVPT}, we know that $G$ is VPT. By \cite{golumbic2009}, we know that if $G$ is $B_1$-EPG then $\chi (B(G|C))\leq 3$,  for all $C \in \mathcal{C}$. By a result given in ~\cite{alcon2014recognizing}, we can say that $G \in [3,2,1]$, and $[3,2,1] = VPT \cap EPT$, and $[3,2,1] = [3,2,2] = EPT$ $\cap$ Chordal~\cite{golumbic1985} then $G$ is a Chordal EPT graph. Therefore, Chordal $B_1$-EPG is contained in EPT. \la{Moreover, the inclusion is proper because for example the graph $4$-sun $S_4$ is an EPT graph (see Figure~\ref{fig:exemplos}(b)) but it is not a $B_1$-EPG graph (see ~\cite{golumbic2009})}.
+Given $G$ be a  Chordal $B_1$-EPG graph and let  $\mathcal{C}$  be the set of cliques of $G$. By Theorem~\ref{teo:chordalB1inVPT}, we know that $G$ is VPT. By \cite{golumbic2009}, we know that if $G$ is $B_1$-EPG then $\chi (B(G|C))\leq 3$,  for all $C \in \mathcal{C}$. By a result given in ~\cite{alcon2014recognizing}, we can say that $G \in [3,2,1]$, and $[3,2,1] = VPT \cap EPT$, and $[3,2,1] = [3,2,2] = EPT$ $\cap$ Chordal~\cite{golumbic1985} then $G$ is a Chordal EPT graph. Therefore, Chordal $B_1$-EPG is contained in EPT. Moreover, the inclusion is proper because for example the graph $4$-sun $S_4$ is an EPT graph (see Figure~\ref{fig:exemplos}(b)) but it is not a $B_1$-EPG graph (see ~\cite{golumbic2009}).
  $\square$\end{pf} 
 
-\la{Theorem~\ref{teo:b1epgept} in fact shows that there is an inclusion relationship between the classes of Chordal $B_1$-EPG graphs and EPT graphs. However, we can ask ourselves if this inclusion is proper, or if the two classes are equivalent. The answer is no, these classes are not equivalent. It is not difficult to find Chordal graphs that have an  EPT representation such that this graphs do not have a $B_1$-EPG representation. The graph $4$-sun $S_4$ is an example. The same representation of Figure~\ref{fig:exemplos}(b) is also  an EPT representation to $S_4$. By results of~\cite{golumbic2009} we known that this graph is not in $B_1$-EPG. By this way the class of Chordal $B_1$-EPG graphs is properly included in the class of EPT graphs.}   
+%\la{Theorem~\ref{teo:b1epgept} in fact shows that there is an inclusion relationship between the classes of Chordal $B_1$-EPG graphs and EPT graphs. However, we can ask ourselves if this inclusion is proper, or if the two classes are equivalent. The answer is no, these classes are not equivalent. It is not difficult to find Chordal graphs that have an  EPT representation such that this graphs do not have a $B_1$-EPG representation. The graph $4$-sun $S_4$ is an example. The same representation of Figure~\ref{fig:exemplos}(b) is also  an EPT representation to $S_4$. By results of~\cite{golumbic2009} we known that this graph is not in $B_1$-EPG. By this way the class of Chordal $B_1$-EPG graphs is properly included in the class of EPT graphs.}   
 
 
 %Demonstração EPG \in EPT
