--- a/includes/include-img/obstrucaoCentro.tex
+++ b/includes/include-img/obstrucaoCentro.tex
@@ -1,7 +1,7 @@
  \begin{figure}[htb]	
  \center%6.3
  \includegraphics[width=5cm]{./img/obstrucaoCentro.png}
- \caption{Graph Center Blocked $C_B$.}
+ \caption{Graph Center Blocked $H$.}
 \label{fig:obstrucaoCentro}
 \end{figure}  
  
